# wbssh

./: .gitignore  CMakeLists.txt  launch.vs.json  vcpkg.json  wbssh.cpp  wbssh.h
include/: log.hpp  poll.hpp
include/shell/: shell.h
src/: poll.cpp
src/shell/: ,  CMakeLists.txt  Makefile.inc  shell.c  shell_interactive.c
